tests/good/interpret/033-if-then-else.clap
val x = 0
val z = if x = 0 then 1 else 2

