tests/bad/typing/004-if-else-different-types.clap
val x = if True then 42 else "42"

